--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "@wdio/cli": "^8.6.2",
     "@wdio/local-runner": "^8.6.2",
     "@wdio/mocha-framework": "^8.6.1",
-    "@wdio/spec-reporter": "^8.4.0",
-    "geckodriver": "^3.2.0",
-    "wdio-geckodriver-service": "^4.1.0"
+    "@wdio/selenium-standalone-service": "^8.6.8",
+    "@wdio/spec-reporter": "^8.4.0"
   },
   "scripts": {
     "test": "wdio run conf/local.conf.js",
